tests/fixtures/invalid/set_slice.py
# Set does not support slice operation
x: set[int] = {1, 2, 3}
y: set[int] = x[0:1]
